--- a/ch2/src/main/AndroidManifest.xml
+++ b/ch2/src/main/AndroidManifest.xml
@@ -8,6 +8,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLab2">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.ch2.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <activity
+            android:name=".section4_camera.Test4_1Activity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".section3_file.Test3_1Activity"
             android:exported="true">
