--- a/ch3_outer/src/main/AndroidManifest.xml
+++ b/ch3_outer/src/main/AndroidManifest.xml
@@ -9,25 +9,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLab2">
         <activity
-            android:name=".section2_task.Test2_1Activity"
-            android:exported="true">
+            android:name=".OneActivity"
+            android:exported="true"
+            android:launchMode="singleTask">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.example.ch3_outer.ACTION_ONE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".section1_lifecycle.SomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".section1_lifecycle.Test1_1Activity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
