Notification Remote Input Receiver

--- a/ch4/src/main/AndroidManifest.xml
+++ b/ch4/src/main/AndroidManifest.xml
@@ -11,9 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLab2">
         <receiver
-            android:name=".section2_notification.MyNotificationReceiver"
+            android:name=".section2_notification.MyRemoteInputReceiver"
             android:enabled="true"
             android:exported="true"></receiver>
+        <receiver
+            android:name=".section2_notification.MyNotificationReceiver"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity
             android:name=".section2_notification.DetailActivity"
