--- a/ch5/src/main/AndroidManifest.xml
+++ b/ch5/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <queries>
         <package android:name="com.example.ch5_outer" />
     </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +16,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLab2">
+        <activity
+            android:name=".section4_aidl.Test4_1Activity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".section3_messenger.Test3_1Activity"
             android:exported="true">
@@ -29,12 +39,12 @@
             android:name=".section2_background.MyJobService"
             android:enabled="true"
             android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE"></service>
+            android:permission="android.permission.BIND_JOB_SERVICE" />
         <service
             android:name=".section2_background.MyService2"
             android:enabled="true"
             android:exported="true"
-            android:foregroundServiceType="shortService"></service>
+            android:foregroundServiceType="shortService" />
 
         <activity
             android:name=".section2_background.Test2_1Activity"
