--- a/ch5_outer/src/main/AndroidManifest.xml
+++ b/ch5_outer/src/main/AndroidManifest.xml
@@ -9,11 +9,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLab2">
         <service
+            android:name=".MyAIDLService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.ch5_outer.ACTION_SERVICE_AIDL"/>
+            </intent-filter>
+        </service>
+        <service
             android:name=".MyMessengerService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.example.ch5_outer.ACTION_SERVICE_MESSENGER"/>
+                <action android:name="com.example.ch5_outer.ACTION_SERVICE_MESSENGER" />
             </intent-filter>
         </service>
 
