--- a/ch7/src/main/AndroidManifest.xml
+++ b/ch7/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLab2">
         <activity
-            android:name=".section2_location.Test2_1Activity"
+            android:name=".section2_playservice.Test2_1Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
